--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                               Segurança</strong></li>
                           <li><strong>Departamento dos Tranportes</strong></li>
                           <li>Permit de Mecadoria (Regular) </li>
-                          <li>AID557MP</li>
+                          <li>Pendente</li>
                         </ul>
                         <ul class="list-unstyled text-right">
                           <li><strong>REPUBLIC OF MOZAMBIQUE</strong></li>
@@ -85,7 +85,7 @@
                               Safety</strong></li>
                           <li><strong>Department of Transport</strong></li>
                           <li>Permit of Mercadoria (Regular) </li>
-                          <li>AID557MP</li>
+                          <li>Pendente</li>
                         </ul>
                       </div>
                     </div>
@@ -107,9 +107,9 @@
                           <li>LUANA INTERNTIONAL TRANSPORTATION, CO.LDA</li>
                           <li><strong>Requisitada Por / Requested By</strong></li>
                         </ul>
-                   LUANA INTERNTIONAL TRANSPORTATION, CO.LDA<br>
+                   Pendente<br>
                         <ul class="list-unstyled">
-                          <li><strong>NUIT:</strong>401 305 637</li>
+                          <li><strong>NUIT:</strong>Pendente</li>
                         </ul>
                       </div>
                       <div class="invoice-items">
@@ -132,21 +132,21 @@
                               <tr>
                                 <th colspan="2" class="text-right">Data de
                                   Emissão / Emission Date</th>
-                                <th class="text-center">22/07/2025</th>
+                                <th class="text-center">Pendente</th>
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">Data de
                                   Validade / Valid Date</th>
-                                <th class="text-center">22/07/2026</th>
+                                <th class="text-center">Pendente</th>
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">Matricula /
                                   Registration Car</th>
-                                <th class="text-center">AID557MP</th>
+                                <th class="text-center">Pendente</th>
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">Marca / Brand</th>
-                                <th class="text-center">FAW</th>
+                                <th class="text-center">Pendente</th>
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">Tipo de
@@ -163,7 +163,7 @@
                                     style="mso-bidi-font-weight:normal"><span style="font-size:9.5pt;line-height:107%;font-family:&quot;Times New Roman&quot;&quot;serif&quot;;
 mso-fareast-font-family:&quot;Times New Roman&quot;;color:black;mso-ansi-language:PT-BR;mso-fareast-language:EN-US;mso-bidi-language:AR-SA"
 
-                                      lang="PT-BR"></span></b>De 3.501kg até 8.000kg<b
+                                      lang="PT-BR"></span></b>Pendente<b
 
                                     style="mso-bidi-font-weight:normal"><span style="font-size:9.5pt;line-height:107%;font-family:&quot;Times New Roman&quot;&quot;serif&quot;;
 mso-fareast-font-family:&quot;Times New Roman&quot;;color:black;mso-ansi-language:PT-BR;mso-fareast-language:EN-US;mso-bidi-language:AR-SA"
@@ -181,7 +181,7 @@ font-family:&quot;Calibri&quot;&quot;sans-serif&quot;;mso-ascii-theme-font:minor
                               <tr>
                                 <th colspan="2" class="text-right">Configuração
                                   / Configuration</th>
-                                <th class="text-center">De 3.501kg até 8.000kg</th>
+                                <th class="text-center">Pendente</th>
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">ORIGEM /
@@ -196,7 +196,7 @@ font-family:&quot;Calibri&quot;&quot;sans-serif&quot;;mso-ascii-theme-font:minor
                                     <strong style="padding-left: 3px; color: red">
                                       
 
-                                           </strong> <strong style="padding-left: 3px; color: red">
+                                         <!--  </strong> <strong style="padding-left: 3px; color: red">
                                           Angola,</strong> <strong style="padding-left: 3px; color: red">
                                           Eswatini,</strong> <strong style="padding-left: 3px; color: red">
                                           Malawi,</strong> <strong style="padding-left: 3px; color: red">
@@ -208,14 +208,14 @@ font-family:&quot;Calibri&quot;&quot;sans-serif&quot;;mso-ascii-theme-font:minor
                                      Tanzania,</strong> <strong style="padding-left: 3px; color: red">-->
                                       
                                      South-Africa,</strong> <strong style="padding-left: 3px; color: red">
-                                      Zamia,</strong>
+                                      Zamia,</strong> -->
                                   </ol>
                                 </th>
                               </tr>
                               <tr>
                                 <th colspan="2" class="text-right">Destino /
                                   Destiny</th>
-                                <th class="text-center">Zimbabwe</th>
+                                <th class="text-center">Pendente</th>
                               </tr>
                             </tbody>
                           </table>
